<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dip"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_budgetId">



            <TextView
                android:id="@+id/home_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Budget ${currentBudget}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_spendId">

            <TextView
                android:id="@+id/home_spend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Spend ${totalSpend}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_total_appId">

            <TextView
                android:id="@+id/home_total_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total number of Subscriptions #{subscriptionCount}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_rem_budgetId">

            <TextView
                android:id="@+id/home_rem_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Budget ${remainingBudget}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/color"
        android:id="@+id/home_average_spendId">
        <TextView
            android:id="@+id/home_average_spend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Average spend per month ${averageSpend}"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</LinearLayout>

</ScrollView>
